fixed padding issue under image on small screens

--- a/css/strapped.css
+++ b/css/strapped.css
@@ -60,7 +60,7 @@ body, h1, h2, h3, h4, h5, h6 {
   background-repeat: no-repeat;
   background-size: 100%;
   color: #fff;
-  padding: 6.5em 0 6em;
+  padding: 6.5em 0 0em;
   text-align: center;
 }
 .jumbotron h1 {
@@ -156,7 +156,7 @@ footer {
   }
   .jumbotron {
     font-size: 14px;
-    padding: 6em 0 4em;
+    padding: 6em 0 0em;
   }
   .benefit {
     margin-bottom: 2em;
